@@ -4,11 +4,11 @@
  * rewritten by Sam Steingold 2003-08-06
  */
 
+#include <clisp.h>
 #include <sys/types.h>          /* regex.h needs this */
 #include <stdlib.h>             /* declare malloc(), free() */
 #include <stdio.h>              /* BUFSIZ */
 #include <regex.h>
-#include <clisp.h>
 
 #ifndef FOREIGN
 #error FOREIGN is not defined.
