@@ -191,9 +191,10 @@ int main(int argc, char* argv[])
     test_f = fopen(argv[1],"w");
     if (test_f == NULL) { perror(argv[1]); exit(1); }
     fprintf(stderr,"writing test file %s\n",argv[1]);
-    fprintf(test_f,"/* generated by %s on %s %s */\n#include <stdio.h>\n"
+    fprintf(test_f,"/* generated by %s on %s %s */\n"
             "#if USE_CLISP_H\n#include \"clisp.h\"\n#else\n"
-            "#include \"lispbibl.c\"\n#endif\n\nint main () {\n",
+            "#include \"lispbibl.c\"\n#endif\n#include <stdio.h>\n\n"
+            "int main () {\n",
             __FILE__,__DATE__,__TIME__);
   }
 
