@@ -1,3 +1,10 @@
+2003-12-21  Sam Steingold  <sds@gnu.org>
+
+	* genclisph.d (test): include <stdio.h> before <clisp.h> because
+	the latter declares a global register variable and the former may
+	define a function (e.g., on FreeBSD)
+	* modules/regexp/regexi.c: ditto
+
 2003-12-20  Sam Steingold  <sds@gnu.org>
 
 	Dropped -fomit-frame-pointer: it buys nothing on today's x86
